fix word wrap

--- a/targetHtml/css/main.css
+++ b/targetHtml/css/main.css
@@ -20,6 +20,7 @@ body {
     background-color: #FBFAF7;
     margin: 0;
     line-height: 1.8em;
+    -webkit-font-smoothing: antialiased;
 }
 
 
@@ -129,6 +130,9 @@ code, pre {
     font-family: Monaco, Terminal, monospace;
     color: #000;
     font-size: 14px;
+    word-break: break-all;
+    /* IE hack to 'gain layout' and apply word-break */
+    float:left;
 }
 pre {
     padding: 4px 12px;
@@ -139,8 +143,9 @@ pre {
     overflow-y: hidden;
     margin-bottom: 32px;
 }
-code .minified {
-	text-wrap: unrestricted;
+code.minified {
+	font-size: 12px;
+	word-break: break-all;
 }
 /* psuedo code */
 .pseudoDeclaration {
@@ -196,6 +201,7 @@ header {
     border-bottom-right-radius: 4px;
     padding: 34px 40px 22px 50px;
     margin: 30px 25px 0 0;
+    -webkit-font-smoothing: antialiased;
 }
 header h1, 
 header h2, 
@@ -228,7 +234,15 @@ header li {
     margin-bottom: 12px;
     line-height: 1em;
     padding: 6px 6px 6px 7px;
+    
     background: #AF0011;
+    background: linear-gradient(top, #AF0011 0%,#820011 100%);
+    background: -moz-linear-gradient(top, #AF0011 0%, #820011 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
+  background: -webkit-linear-gradient(top, #AF0011 0%,#820011 100%);
+  background: -o-linear-gradient(top, #AF0011 0%,#820011 100%);
+  background: -ms-linear-gradient(top, #AF0011 0%,#820011 100%);
+    
     border-radius: 4px;
     border: 1px solid #0D0D0D;
 }
